correct spinner on small screen

--- a/src/components/roverImages/imageSpinner.module.css
+++ b/src/components/roverImages/imageSpinner.module.css
@@ -41,3 +41,10 @@
         transform: rotate(360deg);
     }
 }
+
+@media screen and (max-width: 700px) {
+    .spinnerbox {
+        width: 270px;
+        border-radius: 20px 20px 0px 0px;
+    }
+}
